improvement: update api auth
