# controllers/ops/health/health.go
@@ -5,6 +5,8 @@ package health
 
 import (
 	"app/constants"
+	"app/pkg/jwt"
+	"fmt"
 	"github.com/gin-gonic/gin"
 	"github.com/ysicing/ext/e"
 	"github.com/ysicing/ext/logger"
@@ -13,8 +15,9 @@ import (
 // @Summary health
 // @version 0.0.1
 // @Accept application/json
+// @Tags Health
 // @Success 200
-// @Router /api.ext/v1/health [get]
+// @Router /health [get]
 func Health(c *gin.Context) {
 	c.JSON(200, e.Done("I am ok."))
 }
@@ -22,8 +25,9 @@ func Health(c *gin.Context) {
 // @Summary version
 // @version 0.0.1
 // @Accept application/json
+// @Tags Health
 // @Success 200
-// @Router /api.ext/v1/version [get]
+// @Router /version [get]
 func RVersion(c *gin.Context) {
 	c.JSON(200, e.Done(map[string]string{
 		"builddate": constants.Date,
@@ -35,8 +39,9 @@ func RVersion(c *gin.Context) {
 // @Summary errpage
 // @version 0.0.1
 // @Accept application/json
+// @Tags Health
 // @Success 500
-// @Router /api.ext/v1/err500 [get]
+// @Router /err500 [get]
 func Err500(c *gin.Context) {
 	logger.Slog.Error("too long err")
 	c.JSON(500, e.Error(10500, "500 Err by Gins!"))
@@ -45,9 +50,24 @@ func Err500(c *gin.Context) {
 // @Summary errpanic
 // @version 0.0.1
 // @Accept application/json
+// @Tags Health
 // @Success 500
-// @Router /api.ext/v1/errpanic [get]
+// @Router /errpanic [get]
 func ErrPanic(c *gin.Context) {
 	panic("panic_err")
 	c.JSON(500, e.Error(10500, "Test panic err by Gins!"))
+}
+
+// @Summary 生成测试Token
+// @version 0.0.1
+// @Tags Health
+// @Accept application/json
+// @Success 200
+// @Router /gentoken [get]
+func GenToken(c *gin.Context) {
+	token, _ := jwt.JwtAuth("admin")
+	c.JSON(200, e.Done(map[string]interface{}{
+		"user":  "admin",
+		"token": fmt.Sprintf("Bearer %v", token),
+	}))
 }
